avoid ok button overlap

--- a/www/default.css
+++ b/www/default.css
@@ -2027,7 +2027,8 @@ a.button, a.button:hover, a.button:visited {
 }
 
 .phone .phone-hidden,
-.portrait .portrait-hidden {
+.portrait .portrait-hidden,
+.landscape .landscape-hidden {
     display:none;
 }
 
